--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-drop-shadow": "^0.0.4",
+    "react-native-flexbox-grid": "^0.3.2",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-reanimated": "~2.3.1",
     "react-native-router-flux": "^4.3.1",
