--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-drop-shadow": "^0.0.4",
     "react-native-flexbox-grid": "^0.3.2",
     "react-native-gesture-handler": "~2.1.0",
+    "react-native-paper": "^4.11.2",
     "react-native-reanimated": "~2.3.1",
     "react-native-router-flux": "^4.3.1",
     "react-native-safe-area-context": "3.3.2",
