--- a/app.json
+++ b/app.json
@@ -28,6 +28,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "78738feb-1dca-486e-90d1-9e077bbb77a5"
+      }
     }
   }
 }
