--- a/package.json
+++ b/package.json
@@ -10,34 +10,37 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.5.0",
     "@react-navigation/stack": "^6.1.1",
     "bootstrap": "^5.2.2",
-    "expo": "~44.0.0",
-    "expo-status-bar": "~1.2.0",
-    "expo-updates": "~0.11.7",
-    "react": "17.0.1",
+    "expo": "^47.0.0",
+    "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
+    "react": "18.1.0",
     "react-bootstrap": "^2.5.0",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react-dom": "18.1.0",
+    "react-native": "0.70.5",
     "react-native-animate-loading-button": "^1.0.3",
     "react-native-drop-shadow": "^0.0.4",
     "react-native-flexbox-grid": "^0.3.2",
-    "react-native-gesture-handler": "~2.1.0",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-paper": "^4.11.2",
-    "react-native-reanimated": "~2.3.1",
+    "react-native-reanimated": "~2.12.0",
     "react-native-router-flux": "^4.3.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-toast-message": "^2.1.5",
-    "react-native-web": "0.17.1",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.7",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.19.3"
   },
   "private": true
 }
