--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@react-navigation/stack": "^6.1.1",
     "bootstrap": "^5.2.2",
     "expo": "^47.0.0",
+    "expo-constants": "^14.0.2",
+    "expo-local-authentication": "~13.0.2",
+    "expo-secure-store": "~12.0.0",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
     "react": "18.1.0",
@@ -28,11 +31,13 @@
     "react-native-drop-shadow": "^0.0.4",
     "react-native-flexbox-grid": "^0.3.2",
     "react-native-gesture-handler": "~2.8.0",
+    "react-native-keychain": "^8.1.1",
     "react-native-paper": "^4.11.2",
     "react-native-reanimated": "~2.12.0",
     "react-native-router-flux": "^4.3.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-sensitive-info": "^6.0.0-alpha.9",
     "react-native-toast-message": "^2.1.5",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7",
