Gina:Added Loader

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-constants": "^14.0.2",
     "expo-local-authentication": "~13.0.2",
     "expo-secure-store": "~12.0.0",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
     "react": "18.1.0",
@@ -32,6 +33,7 @@
     "react-native-flexbox-grid": "^0.3.2",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-keychain": "^8.1.1",
+    "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "^4.11.2",
     "react-native-reanimated": "~2.12.0",
     "react-native-router-flux": "^4.3.1",
