--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "ezzyapp",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/logos/asili.png",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
@@ -17,7 +17,8 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.ezzy.ezzyapp"
     },
     "android": {
       "package": "com.ezzy.ezzyapp",
