--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
     "expo-updates": "~0.15.6",
+    "fiction-expo-restart": "^1.1.3",
     "react": "18.1.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.1.0",
@@ -36,6 +37,7 @@
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-paper": "^4.11.2",
     "react-native-reanimated": "~2.12.0",
+    "react-native-restart": "^0.0.24",
     "react-native-router-flux": "^4.3.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
