--- a/package.json
+++ b/package.json
@@ -10,46 +10,49 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.17.11",
-    "@react-native-community/masked-view": "^0.1.11",
-    "@react-navigation/bottom-tabs": "^6.5.2",
-    "@react-navigation/native": "^6.0.13",
-    "@react-navigation/native-stack": "^6.5.0",
-    "@react-navigation/stack": "^6.1.1",
-    "bootstrap": "^5.2.2",
-    "expo": "^47.0.0",
-    "expo-constants": "^14.0.2",
-    "expo-local-authentication": "~13.0.2",
-    "expo-secure-store": "~12.0.0",
-    "expo-splash-screen": "~0.17.5",
-    "expo-status-bar": "~1.4.2",
-    "expo-updates": "~0.15.6",
-    "fiction-expo-restart": "^1.1.3",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/masked-view": "0.1.11",
+    "@react-navigation/bottom-tabs": "6.5.2",
+    "@react-navigation/native": "6.0.13",
+    "@react-navigation/native-stack": "6.5.0",
+    "@react-navigation/stack": "6.1.1",
+    "bootstrap": "5.2.2",
+    "expo": "47.0.0",
+    "expo-constants": "14.0.2",
+    "expo-local-authentication": "13.0.2",
+    "expo-secure-store": "12.0.0",
+    "expo-splash-screen": "0.17.5",
+    "expo-status-bar": "1.4.2",
+    "expo-updates": "0.15.6",
+    "fiction-expo-restart": "1.1.3",
+    "prop-types": "15.8.1",
     "react": "18.1.0",
-    "react-bootstrap": "^2.5.0",
+    "react-bootstrap": "2.5.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-animate-loading-button": "^1.0.3",
-    "react-native-drop-shadow": "^0.0.4",
-    "react-native-flexbox-grid": "^0.3.2",
-    "react-native-gesture-handler": "~2.8.0",
-    "react-native-keychain": "^8.1.1",
-    "react-native-loading-spinner-overlay": "^3.0.1",
-    "react-native-paper": "^4.11.2",
-    "react-native-reanimated": "~2.12.0",
-    "react-native-restart": "^0.0.24",
-    "react-native-router-flux": "^4.3.1",
+    "react-native-animate-loading-button": "1.0.3",
+    "react-native-drop-shadow": "0.0.4",
+    "react-native-flexbox-grid": "0.3.2",
+    "react-native-gesture-handler": "2.8.0",
+    "react-native-keychain": "8.1.1",
+    "react-native-loading-spinner-overlay": "3.0.1",
+    "react-native-paper": "4.11.2",
+    "react-native-pin-view": "3.0.3",
+    "react-native-reanimated": "2.12.0",
+    "react-native-restart": "0.0.24",
+    "react-native-router-flux": "4.3.1",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
-    "react-native-sensitive-info": "^6.0.0-alpha.9",
-    "react-native-toast-message": "^2.1.5",
-    "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.7",
-    "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4"
+    "react-native-screens": "3.18.0",
+    "react-native-sensitive-info": "6.0.0-alpha.9",
+    "react-native-smooth-phone-input": "^1.0.3",
+    "react-native-toast-message": "2.1.5",
+    "react-native-vector-icons": "9.2.0",
+    "react-native-web": "^0.18.7",
+    "react-navigation": "4.4.4",
+    "react-navigation-stack": "2.10.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3"
+    "@babel/core": "7.19.3"
   },
   "private": true
 }
