--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-smooth-phone-input": "^1.0.3",
     "react-native-toast-message": "2.1.5",
     "react-native-vector-icons": "9.2.0",
+    "react-native-virtual-keyboard": "^1.2.2",
     "react-native-web": "^0.18.7",
     "react-navigation": "4.4.4",
     "react-navigation-stack": "2.10.4"
