--- a/package.json
+++ b/package.json
@@ -24,13 +24,14 @@
     "expo-splash-screen": "0.17.5",
     "expo-status-bar": "1.4.2",
     "expo-updates": "0.15.6",
-    "fiction-expo-restart": "1.1.3",
+    "moment": "^2.29.4",
     "prop-types": "15.8.1",
     "react": "18.1.0",
     "react-bootstrap": "2.5.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-animate-loading-button": "1.0.3",
+    "react-native-countdown-text": "^1.0.5",
     "react-native-drop-shadow": "0.0.4",
     "react-native-flexbox-grid": "0.3.2",
     "react-native-gesture-handler": "2.8.0",
@@ -39,7 +40,7 @@
     "react-native-paper": "4.11.2",
     "react-native-pin-view": "3.0.3",
     "react-native-reanimated": "2.12.0",
-    "react-native-restart": "0.0.24",
+    "react-native-restart": "^0.0.27",
     "react-native-router-flux": "4.3.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "3.18.0",
