--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "expo-status-bar": "1.4.2",
     "expo-updates": "0.15.6",
     "fiction-expo-restart": "1.1.3",
+    "moment": "^2.29.4",
     "prop-types": "15.8.1",
     "react": "18.1.0",
     "react-bootstrap": "2.5.0",
     "react-dom": "18.1.0",
+    "react-moment": "^1.1.3",
     "react-native": "0.70.5",
     "react-native-animate-loading-button": "1.0.3",
     "react-native-drop-shadow": "0.0.4",
