--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "6.1.1",
     "bootstrap": "5.2.2",
     "expo": "47.0.0",
+    "expo-build-properties": "~0.4.1",
     "expo-constants": "14.0.2",
     "expo-local-authentication": "13.0.2",
     "expo-secure-store": "12.0.0",
@@ -54,7 +55,8 @@
     "react-navigation-stack": "2.10.4"
   },
   "devDependencies": {
-    "@babel/core": "7.19.3"
+    "@babel/core": "7.19.3",
+    "react-native-obfuscating-transformer": "^1.0.0"
   },
   "private": true
 }
